Fix resize selector overflow

--- a/app/javascript/src/styles/views/posts/show/partials/_post_toolbar.scss
+++ b/app/javascript/src/styles/views/posts/show/partials/_post_toolbar.scss
@@ -115,6 +115,7 @@
 // Resize selector
 #ptbr-wrapper .ptbr-resize select {
   height: 2rem;
+  max-width: 25vw; // Prevent overflow on tiny screens
   padding: 0 0.5rem;
 
   font-family: "Roboto", Verdana, Geneva, sans-serif;
